--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ back_to_top_text: "Back to top"
 last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
 last_edit_time_format: "%b %e %Y at %I:%M %p" # uses ruby's time format: https://ruby-doc.org/stdlib-2.7.0/libdoc/time/rdoc/Time.html
 
-footer_content: "Copyright &copy; 2022 the ODNS team. Distributed by an <a href=\"https://github.com/nprint/pcapml/tree/master/LICENSE\">Apache 2.0 license.</a>"
+footer_content: "Copyright &copy; 2022 the ODNS team."
 
 plugins:
   - jekyll-seo-tag
